--- a/styles/style.css
+++ b/styles/style.css
@@ -106,7 +106,7 @@ input{
     height: 100vh;
 }
 .product-section{
-    height: 70vh;
+    height: 65vh;
     padding: 10px;
 }
 .product-list{
@@ -124,4 +124,44 @@ input{
     margin: 0 10px;
     height: 50vh;
     width: 60vh;
+}
+.featured {
+    background-color: blue;
+    height: 100vh;
+    padding: 30px;
+    overflow: hidden;  
+}
+.feature-button{
+    width: 60px;
+    display: flex;
+    justify-content: space-between;
+}
+.feature-button a{
+    font-size: 35px;
+    cursor: pointer;
+}
+
+.featured-heading {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+    margin-bottom: 10px; 
+}
+
+.featured h1 {
+    font-size: 40px;
+}
+
+.featured-display {
+    display: flex;
+    flex-direction: row; 
+    transition: transform 0.5s ease; 
+}
+
+.featured-item {
+    height: 80vh;
+    width: 30vw;
+    flex: 0 0 auto;
+    margin: 0 10px;
+    background-color: red;
 }
