--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,13 @@
     color: black;
     font-weight: bold;
 }
+.center ul li a:hover{
+    text-decoration: none;
+    border-bottom-width: 2px;
+    border-bottom-style: solid;
+    padding-bottom: 5px;
+
+}
 .right{
     display: flex;
     padding: 20px 10px;
@@ -102,34 +109,44 @@ input{
     cursor: pointer;
 }
 .video-section{
-    background-color: red;
-    height: 100vh;
+    background: url('../assets/nikepegasus.png');
+    background-size: cover;
+    height: 90vh;
+    margin-bottom: 50px;
 }
 .product-section{
-    height: 65vh;
     padding: 10px;
+    margin-bottom: 50px;
 }
 .product-list{
     display: flex;
     justify-content:space-around;
 }
 .product-section p{
-    margin-top: 10px;
+    margin-top: 40px;
     margin-left: 35%;
     font-size: 20px;
-    color: rgb(168, 168, 168);
+    color: rgb(188, 188, 188);
 }
 .product{
-    background-color: aqua;
     margin: 0 10px;
-    height: 50vh;
+    height: 70vh;
     width: 60vh;
 }
+.product img{
+    height: 100%;
+    width: 100%;
+}
 .featured {
-    background-color: blue;
-    height: 100vh;
+    background: rgba( 255, 255, 255, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 5.5px );
+    -webkit-backdrop-filter: blur( 5.5px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
     padding: 30px;
     overflow: hidden;  
+    margin-bottom: 50px;
 }
 .feature-button{
     width: 60px;
@@ -164,4 +181,110 @@ input{
     flex: 0 0 auto;
     margin: 0 10px;
     background-color: red;
+}
+.featured-item img{
+    height: 100%;
+    width: 100%;
+}
+
+.popular{
+    margin-top: 40px;
+    padding: 25px;
+}
+.popular-heading h1{
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+.popular-display{
+    justify-content: center;
+    display: grid;
+    gap: 10px;
+    padding: 10px;
+}
+.popular-item{
+    padding: 20px;
+}
+.popular-item img{
+    height: 100%;
+    width: 100%;
+}
+.item1 {
+    grid-column: 1 / span 2;
+    grid-row: 1;
+    height: 50vh;
+}
+.item2 {
+    grid-column: 3;
+    grid-row: 1 / span 2;
+}
+.item5 {
+    padding: 20px 20%;
+    grid-column: 1 / span 3;
+    grid-row: 3;
+}
+.membership{
+    padding: 20px;
+}
+.membership-heading h1{
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+.membership-display{
+    margin-top: 40px;
+    justify-content: center;
+    display: grid;
+    gap: 50px;
+    grid-template-columns: auto auto auto;
+}
+.membership-item img{
+    height: 70vh;
+    width: 100%;
+}
+.footer-display{
+    display: flex;
+    justify-content: space-between;
+}
+.footer-display-left{
+    display: flex;
+    justify-content: space-around;
+    width: 60%;
+}
+.footer-display-left ul li{
+    list-style: none;
+}
+.footer-display-left ul li h1{
+    margin:30px 0 ;
+}
+.footer-display-left ul li a{
+    text-decoration: none;
+    color: rgb(149, 149, 149);
+}
+
+.footer-display-right{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin-right: 25px;
+}
+.footer-display-right i{
+    color: rgb(137, 137, 137);
+    margin-right: 10px;
+    font-size: 30px;
+}
+.footer-display-right h1{
+    font-size: 20px;
+}
+.footer-bottom{
+    margin: 25px 0;
+}
+.footer-bottom ul{
+    margin-left: 10px;
+    display: flex;
+    width: 40%;
+    justify-content: space-between;
+}
+.footer-bottom ul li{
+    list-style: none;
+    color: rgb(137, 137, 137);
 }
